fixed some alignment issue in project component

--- a/src/components/projects/projects.scss
+++ b/src/components/projects/projects.scss
@@ -73,7 +73,7 @@
       position: relative;
       display: flex;
       justify-content: center;
-      align-items: center;
+      // align-items: center;
       .img-links {
         
         .image-box {
@@ -86,8 +86,8 @@
         .project-links {
           display: flex;
           justify-content: center;
-          width: 100%;
-          height: 100%;
+          // width: 100%;
+          // height: 100%;
           a {
             background: rgb(115, 146, 136);
             text-transform: uppercase;
@@ -198,7 +198,7 @@
         flex-direction: column;
         .img-links {
           .image-box {
-            width: 60vw;
+            width: 80vw;
           }
         }
         .project-html-box {
